--- a/index.html
+++ b/index.html
@@ -38,6 +38,31 @@
                     Pesquisar
                 </button>
             </div>
+            <div id="search-filters" class="search-filters">
+                <h4>Buscar em:</h4>
+                <div class="filter-options">
+                    <label class="filter-label">
+                        <input type="checkbox" name="source" value="Google Shopping">
+                        <span>Google Shopping</span>
+                    </label>
+                    <label class="filter-label">
+                        <input type="checkbox" name="source" value="Mercado Livre">
+                        <span>Mercado Livre</span>
+                    </label>
+                     <label class="filter-label">
+                        <input type="checkbox" name="source" value="Amazon">
+                        <span>Amazon</span>
+                    </label>
+                    <label class="filter-label">
+                        <input type="checkbox" name="source" value="Facebook Marketplace">
+                        <span>Facebook</span>
+                    </label>
+                    <label class="filter-label">
+                        <input type="checkbox" name="source" value="Instagram Shopping">
+                        <span>Instagram</span>
+                    </label>
+                </div>
+            </div>
             <div class="recent-searches">
                 <h3>Pesquisas Recentes:</h3>
                 <div class="tags" id="recent-tags">
