feat: Add quick search toggle
Introduces a "Quick Search" option that allows users to search for product prices only, bypassing detailed product analysis. This feature is controlled by a new toggle switch integrated into the search interface. The prompt for the AI model has been updated to accommodate this new search mode.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                     Pesquisar
                 </button>
             </div>
+            <div class="quick-search-container">
+                <label class="switch">
+                    <input type="checkbox" id="quick-search-toggle">
+                    <span class="slider"></span>
+                </label>
+                <span>Busca Rápida (Apenas Preços)</span>
+            </div>
             <div class="recent-searches">
                 <h3>Pesquisas Recentes:</h3>
                 <div class="tags" id="recent-tags">
