--- a/index.html
+++ b/index.html
@@ -77,5 +77,13 @@
 </footer>
 
 <script type="module" src="index.tsx"></script>
+  <script> 
+      var script = document.createElement('script'); 
+      script.src = 'https://cdn.jsdelivr.net/npm/eruda'; 
+      document.body.appendChild(script); 
+      script.onload = function () {
+         eruda.init();
+      }
+  </script>
 </body>
 </html>
